--- a/src/ResourceManager.Api/appsettings.Development.json
+++ b/src/ResourceManager.Api/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:18477",
+          "https://localhost:44396",
+          "http://localhost:5053",
+          "https://localhost:7039"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
