--- a/src/ResourceManager.Api/ResourceManager.Api.csproj
+++ b/src/ResourceManager.Api/ResourceManager.Api.csproj
@@ -9,9 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5"/>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -21,7 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ResourceManager.Infrastructure\ResourceManager.Infrastructure.csproj"/>
+        <ProjectReference Include="..\ResourceManager.Application\ResourceManager.Application.csproj" />
+        <ProjectReference Include="..\ResourceManager.Infrastructure\ResourceManager.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
