--- a/tests/ResourceManager.Domain.UnitTests/ResourceManager.Domain.UnitTests.csproj
+++ b/tests/ResourceManager.Domain.UnitTests/ResourceManager.Domain.UnitTests.csproj
@@ -7,13 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\ResourceManager.Domain\ResourceManager.Domain.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="6.11.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
       <PackageReference Include="xunit" Version="2.4.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\ResourceManager.Domain\ResourceManager.Domain.csproj" />
     </ItemGroup>
 
 </Project>
